--- a/models/shema.yml
+++ b/models/shema.yml
@@ -6,7 +6,10 @@ sources:
   tables:
   - name: sales
     identifier: raw_gz_sales
+    description: Satıs tablosu
   - name: product
     identifier: raw_gz_product
+    description: Urun tablosu
   - name: ship
     identifier: raw_gz_ship
+    description: Yukleme tablosu
